src/index.css
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Rubik !important;
  overflow-y: hidden;
}
h4 {
  font-weight: 700 !important;
}
h5 {
  font-weight: 600 !important;
  font-size: 26px !important;
}
h6 {
  font-weight: 600 !important;
  color: #969696;
  font-size: 14px !important;
}
input {
  font-weight: 600 !important;
}

